Force worp wrap in bug summaries

--- a/app/css/_buglist.scss
+++ b/app/css/_buglist.scss
@@ -112,7 +112,8 @@
       clear: both;
       font-size: 0.85em;
       margin: 0;
-      padding:0px 15px 6px;
+      padding: 0px 15px 6px;
+      word-wrap: break-word;
     }
 
     & > .bug-last-change-date {
